--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 server.port=8081
 bot.username=BOT_NAME
 bot.token=BOT_TOKEN
-forecast.api.url=http://google.com
+forecast.api.url=http://magicseaweed.com/api/458aa6b79eef80ed4cc9ef02b72635a1/forecast/?spot_id=922
